[fix] full screen spinner overlaping the nav.

--- a/client/src/components/common/Spinner/Spinner.scss
+++ b/client/src/components/common/Spinner/Spinner.scss
@@ -3,7 +3,7 @@
 
 .spinner {
   position: relative;
-  z-index: 3;
+  z-index: 1;
 
   &--small &__circle {
     width: 25px;
